--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">MangaCat</string>
+    <string name="login_message_part_1">Log in</string>
+    <string name="login_message_part_2">to your account.</string>
+    <string name="label_username_email">Username or email</string>
+    <string name="label_password">Password</string>
+    <string name="register_message_part_1">Don\'t have an account?</string>
+    <string name="register_message_part_2"> Register</string>
+    <string name="label_forgot_password">Forgot Password?</string>
 </resources>
